--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -40,6 +40,55 @@
     "feature_tools": "疗愈工具",
     "feature_tools_desc": "白噪音、呼吸引导、正念冥想，随时为你减压放松"
   },
+  "legal": {
+    "back_home": "返回首页",
+    "privacy": {
+      "title": "隐私政策",
+      "subtitle": "我们如何收集、使用与保护你的信息",
+      "updated_at": "最后更新：2026-02-20",
+      "sections": [
+        {
+          "heading": "1. 收集的信息",
+          "body": "我们会收集你提供的账号信息、量表答案、对话内容与功能使用记录，仅用于提供产品功能与安全分流。"
+        },
+        {
+          "heading": "2. 信息使用目的",
+          "body": "你的数据用于账号管理、心理量表评估、风险检测、功能授权和服务改进，不用于未经同意的广告投放。"
+        },
+        {
+          "heading": "3. 数据安全与保存",
+          "body": "我们采用加密传输与存储机制，限制内部访问权限，并按合规要求进行数据保留与删除。"
+        },
+        {
+          "heading": "4. 你的权利",
+          "body": "你可请求导出或删除个人数据。请注意：本产品为心理教练工具，不提供医疗诊断与处方建议。"
+        }
+      ]
+    },
+    "terms": {
+      "title": "服务条款",
+      "subtitle": "使用 MiMind 前请阅读以下条款",
+      "updated_at": "最后更新：2026-02-20",
+      "sections": [
+        {
+          "heading": "1. 服务性质",
+          "body": "MiMind 是心理教练平台，不属于医疗服务，不提供临床诊断、治疗或药物建议。"
+        },
+        {
+          "heading": "2. 用户责任",
+          "body": "你应提供真实信息并合理使用产品，不得用于违法违规用途，不得绕过平台安全机制。"
+        },
+        {
+          "heading": "3. 风险与求助",
+          "body": "若出现自伤/伤他或其他紧急风险，请立即联系当地紧急服务或专业机构，平台会触发安全引导机制。"
+        },
+        {
+          "heading": "4. 条款调整",
+          "body": "我们可能根据产品迭代和合规要求更新条款。继续使用服务即表示你接受更新后的版本。"
+        }
+      ]
+    }
+  },
   "home": {
     "reassessment_overdue_title": "量表重测已到期",
     "reassessment_overdue_body": "{{scales}} 已到期 {{days}} 天，请尽快重测以更新评估结果。",
@@ -439,7 +488,76 @@
     "accept": "我已了解，继续测试",
     "decline": "暂不测试",
     "banner_title": "本结果为特质探索，非临床诊断",
-    "banner_body": "以下结果帮助你了解自身认知与行为模式，不能替代专业评估。如需进一步了解，请咨询精神科医生。"
+    "banner_body": "以下结果帮助你了解自身认知与行为模式，不能替代专业评估。如需进一步了解，请咨询精神科医生。",
+    "coach_message": "💡 温馨提示：以下讨论涉及神经多样性相关特质。MiMind 的评估和对话旨在帮助你探索个人认知与行为模式，绝非临床诊断。如果你认为这些特质已严重影响日常生活，建议寻求专业精神科医生的评估。"
+  },
+  "neuro_share": {
+    "card_title": "你的大脑说明书",
+    "score_label": "得分",
+    "insight_label": "洞察",
+    "footer": "神经多样性特质探索 · 非临床诊断",
+    "fallback": {
+      "title": "认知特质画像",
+      "tags": ["神经多样性", "特质探索", "非临床诊断"]
+    },
+    "archetypes": {
+      "asrs": {
+        "low": {
+          "title": "稳定节奏型",
+          "tags": ["节奏稳定", "执行平衡", "可持续推进"]
+        },
+        "moderate": {
+          "title": "猎人型倾向",
+          "tags": ["高唤醒启动", "任务切换快", "需要结构化"]
+        },
+        "high": {
+          "title": "猎人型执行者",
+          "tags": ["高能量驱动", "冲刺型完成", "微结构最友好"]
+        }
+      },
+      "aq10": {
+        "low": {
+          "title": "均衡社交型",
+          "tags": ["社交信号均衡", "情境适配强", "沟通弹性好"]
+        },
+        "moderate": {
+          "title": "系统化倾向",
+          "tags": ["细节敏锐", "深度聚焦", "偏好清晰规则"]
+        },
+        "high": {
+          "title": "系统化分析者",
+          "tags": ["模式识别强", "结构思维强", "信息压缩效率高"]
+        }
+      },
+      "hsp": {
+        "low": {
+          "title": "稳态感知型",
+          "tags": ["刺激耐受高", "环境适配快", "情绪波动平稳"]
+        },
+        "moderate": {
+          "title": "敏锐感知型",
+          "tags": ["环境察觉快", "情绪共鸣强", "需要节奏留白"]
+        },
+        "high": {
+          "title": "感知放大器",
+          "tags": ["高分辨感知", "深度情绪加工", "恢复窗口重要"]
+        }
+      },
+      "catq": {
+        "low": {
+          "title": "自然呈现型",
+          "tags": ["表达较自然", "社交耗能较低", "适配压力较小"]
+        },
+        "moderate": {
+          "title": "适配协商型",
+          "tags": ["场景化调节", "策略性表达", "需要恢复时间"]
+        },
+        "high": {
+          "title": "高负荷适配者",
+          "tags": ["持续社交监控", "强适配驱动", "社交后耗竭明显"]
+        }
+      }
+    }
   },
   "pwa": {
     "install_title": "安装 MiMind 到桌面",
