feat(relief): complete T-706 migrate breathing and sensory flows into relief module

--- a/frontend/user/public/locales/en-US.json
+++ b/frontend/user/public/locales/en-US.json
@@ -390,7 +390,7 @@
     "account_chars": "Account can only contain letters, numbers, dot, underscore, and hyphen"
   },
   "sensory": {
-    "back": "Back to Tools",
+    "back": "Back to Relief Hub",
     "title": "Sensory Overload Kit",
     "subtitle": "When the world feels too much, this is your safe space. Take it at your own pace.",
     "noise_title": "Soothing Noise",
