--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -390,7 +390,7 @@
     "account_chars": "账号仅支持字母、数字、点、下划线和短横线"
   },
   "sensory": {
-    "back": "返回工具箱",
+    "back": "返回急救舱",
     "title": "感官过载急救包",
     "subtitle": "当周围环境让你感到崩溃时，这里是你的安全港。慢慢来，按你的节奏。",
     "noise_title": "舒缓噪音",
