--- a/frontend/user/public/locales/en-US.json
+++ b/frontend/user/public/locales/en-US.json
@@ -300,10 +300,15 @@
   "relief": {
     "title": "Relief Hub",
     "subtitle": "When everything feels too much, pause here first. Use the fastest stabilization tools and return to a tolerable rhythm.",
+    "minimal_hint": "Do one thing first. Lower stimulation and guide your body back to safety.",
+    "quick_pink_caption": "Low-Frequency Support",
+    "quick_pink_start": "Start Pink Noise",
+    "quick_pink_running": "Pink Noise Playing",
     "quick_sensory_title": "Start Sensory Relief",
     "quick_sensory_desc": "Reduce overload and rebuild a sense of safety quickly.",
     "quick_breath_title": "Start Guided Breathing",
-    "quick_breath_desc": "Follow the breathing cadence to downshift your nervous system."
+    "quick_breath_desc": "Follow the breathing cadence to downshift your nervous system.",
+    "stop_all_audio": "Stop All Audio"
   },
   "journal": {
     "title": "Mood Journal",
