feat(mindfulness): complete T-714 manifestation v1 with affirmations vision cards and soft audio

--- a/frontend/user/public/locales/en-US.json
+++ b/frontend/user/public/locales/en-US.json
@@ -317,9 +317,20 @@
     "subtitle": "Practice slower, deeper regulation here. Meditation and manifestation tools will keep expanding in this space.",
     "meditation_title": "Guided Meditation",
     "meditation_desc": "Pick a guided track and follow breath plus attention to settle deeply.",
-    "manifestation_badge": "Coming Soon",
+    "manifestation_badge": "Live v1",
     "manifestation_title": "Manifestation",
-    "manifestation_desc": "Capture affirmations and vision cards to reinforce positive momentum."
+    "manifestation_desc": "Capture affirmations and vision cards to reinforce positive momentum.",
+    "manifestation_audio_start": "Play Gentle Ocean Ambience",
+    "manifestation_audio_stop": "Stop Background Audio",
+    "manifestation_affirmation_title": "Affirmation Journal",
+    "manifestation_affirmation_desc": "Write one sentence you want to reinforce now.",
+    "manifestation_affirmation_placeholder": "e.g. I am becoming steadier, clearer, and more grounded.",
+    "manifestation_empty_affirmation": "No entries yet. Add your first affirmation.",
+    "manifestation_vision_title": "Vision Cards",
+    "manifestation_vision_desc": "Turn your desired future into cards you can read and feel.",
+    "manifestation_vision_title_placeholder": "Card title",
+    "manifestation_vision_note_placeholder": "Describe what you see and feel when this vision has happened.",
+    "manifestation_empty_vision": "No vision cards yet. Save your first one."
   },
   "journal": {
     "title": "Mood Journal",
@@ -608,6 +619,7 @@
     "back": "Back",
     "cancel": "Cancel",
     "confirm": "Confirm",
+    "add": "Add",
     "save": "Save",
     "share": "Share",
     "download_image": "Download image",
