--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -317,9 +317,20 @@
     "subtitle": "在这里做更慢、更深的练习。冥想与显化工具会在这里持续扩展。",
     "meditation_title": "冥想引导",
     "meditation_desc": "选择一段引导语，跟随呼吸和注意力完成一次深度放松。",
-    "manifestation_badge": "即将上线",
+    "manifestation_badge": "已上线 v1",
     "manifestation_title": "显化练习",
-    "manifestation_desc": "记录肯定语和愿景卡片，建立持续的内在强化。"
+    "manifestation_desc": "记录肯定语和愿景卡片，建立持续的内在强化。",
+    "manifestation_audio_start": "播放轻柔海浪背景音",
+    "manifestation_audio_stop": "停止背景音",
+    "manifestation_affirmation_title": "肯定语记录",
+    "manifestation_affirmation_desc": "写下你现在最想强化的一句话。",
+    "manifestation_affirmation_placeholder": "例如：我正在稳定地变得更专注、更平静。",
+    "manifestation_empty_affirmation": "还没有记录，先写第一条肯定语。",
+    "manifestation_vision_title": "愿景卡片",
+    "manifestation_vision_desc": "把想要发生的画面写成可读、可感受的卡片。",
+    "manifestation_vision_title_placeholder": "卡片标题",
+    "manifestation_vision_note_placeholder": "描述这个愿景已经发生时，你会看到什么、感受到什么。",
+    "manifestation_empty_vision": "还没有愿景卡片，先保存第一张。"
   },
   "journal": {
     "title": "情绪日记",
@@ -608,6 +619,7 @@
     "back": "返回",
     "cancel": "取消",
     "confirm": "确认",
+    "add": "添加",
     "save": "保存",
     "share": "分享",
     "download_image": "下载图片",
