--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -296,7 +296,43 @@
     "stats_total_duration": "累计时长",
     "stats_sessions_unit": "次",
     "stats_hour_short": "小时",
-    "stats_min_short": "分"
+    "stats_min_short": "分",
+    "rescue": {
+      "title": "急救舱",
+      "subtitle": "当你感觉被压垮时，先停下来。这里提供最快可用的稳定工具，帮助你回到可承受节奏。",
+      "minimal_hint": "先做一件事就好。减少刺激，慢慢把身体带回安全区。",
+      "quick_pink_caption": "低频稳定",
+      "quick_pink_start": "一键启动粉红噪音",
+      "quick_pink_running": "粉红噪音播放中",
+      "quick_sensory_title": "一键进入感官急救",
+      "quick_sensory_desc": "优先降低噪音与刺激，快速建立安全感。",
+      "quick_breath_title": "一键开始呼吸引导",
+      "quick_breath_desc": "跟随节奏呼吸，先把神经系统慢下来。",
+      "stop_all_audio": "停止全部声音"
+    },
+    "mindfulness": {
+      "back": "返回心灵空间",
+      "title": "心灵空间",
+      "subtitle": "在这里做更慢、更深的练习。冥想与显化工具会在这里持续扩展。",
+      "meditation_title": "冥想引导",
+      "meditation_desc": "选择一段引导语，跟随呼吸和注意力完成一次深度放松。"
+    },
+    "manifestation": {
+      "badge": "已上线 v1",
+      "title": "显化练习",
+      "desc": "记录肯定语和愿景卡片，建立持续的内在强化。",
+      "audio_start": "播放轻柔海浪背景音",
+      "audio_stop": "停止背景音",
+      "affirmation_title": "肯定语记录",
+      "affirmation_desc": "写下你现在最想强化的一句话。",
+      "affirmation_placeholder": "例如：我正在稳定地变得更专注、更平静。",
+      "empty_affirmation": "还没有记录，先写第一条肯定语。",
+      "vision_title": "愿景卡片",
+      "vision_desc": "把想要发生的画面写成可读、可感受的卡片。",
+      "vision_title_placeholder": "卡片标题",
+      "vision_note_placeholder": "描述这个愿景已经发生时，你会看到什么、感受到什么。",
+      "empty_vision": "还没有愿景卡片，先保存第一张。"
+    }
   },
   "relief": {
     "title": "急救舱",
@@ -545,63 +581,115 @@
     "footer": "神经多样性特质探索 · 非临床诊断",
     "fallback": {
       "title": "认知特质画像",
-      "tags": ["神经多样性", "特质探索", "非临床诊断"]
+      "tags": [
+        "神经多样性",
+        "特质探索",
+        "非临床诊断"
+      ]
     },
     "archetypes": {
       "asrs": {
         "low": {
           "title": "稳定节奏型",
-          "tags": ["节奏稳定", "执行平衡", "可持续推进"]
+          "tags": [
+            "节奏稳定",
+            "执行平衡",
+            "可持续推进"
+          ]
         },
         "moderate": {
           "title": "猎人型倾向",
-          "tags": ["高唤醒启动", "任务切换快", "需要结构化"]
+          "tags": [
+            "高唤醒启动",
+            "任务切换快",
+            "需要结构化"
+          ]
         },
         "high": {
           "title": "猎人型执行者",
-          "tags": ["高能量驱动", "冲刺型完成", "微结构最友好"]
+          "tags": [
+            "高能量驱动",
+            "冲刺型完成",
+            "微结构最友好"
+          ]
         }
       },
       "aq10": {
         "low": {
           "title": "均衡社交型",
-          "tags": ["社交信号均衡", "情境适配强", "沟通弹性好"]
+          "tags": [
+            "社交信号均衡",
+            "情境适配强",
+            "沟通弹性好"
+          ]
         },
         "moderate": {
           "title": "系统化倾向",
-          "tags": ["细节敏锐", "深度聚焦", "偏好清晰规则"]
+          "tags": [
+            "细节敏锐",
+            "深度聚焦",
+            "偏好清晰规则"
+          ]
         },
         "high": {
           "title": "系统化分析者",
-          "tags": ["模式识别强", "结构思维强", "信息压缩效率高"]
+          "tags": [
+            "模式识别强",
+            "结构思维强",
+            "信息压缩效率高"
+          ]
         }
       },
       "hsp": {
         "low": {
           "title": "稳态感知型",
-          "tags": ["刺激耐受高", "环境适配快", "情绪波动平稳"]
+          "tags": [
+            "刺激耐受高",
+            "环境适配快",
+            "情绪波动平稳"
+          ]
         },
         "moderate": {
           "title": "敏锐感知型",
-          "tags": ["环境察觉快", "情绪共鸣强", "需要节奏留白"]
+          "tags": [
+            "环境察觉快",
+            "情绪共鸣强",
+            "需要节奏留白"
+          ]
         },
         "high": {
           "title": "感知放大器",
-          "tags": ["高分辨感知", "深度情绪加工", "恢复窗口重要"]
+          "tags": [
+            "高分辨感知",
+            "深度情绪加工",
+            "恢复窗口重要"
+          ]
         }
       },
       "catq": {
         "low": {
           "title": "自然呈现型",
-          "tags": ["表达较自然", "社交耗能较低", "适配压力较小"]
+          "tags": [
+            "表达较自然",
+            "社交耗能较低",
+            "适配压力较小"
+          ]
         },
         "moderate": {
           "title": "适配协商型",
-          "tags": ["场景化调节", "策略性表达", "需要恢复时间"]
+          "tags": [
+            "场景化调节",
+            "策略性表达",
+            "需要恢复时间"
+          ]
         },
         "high": {
           "title": "高负荷适配者",
-          "tags": ["持续社交监控", "强适配驱动", "社交后耗竭明显"]
+          "tags": [
+            "持续社交监控",
+            "强适配驱动",
+            "社交后耗竭明显"
+          ]
         }
       }
     }
