--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -174,6 +174,14 @@
     "paywall_subtitle": "当前方案仅支持填写量表。订阅后可查看完整得分解读与趋势。",
     "unlock_reports": "去订阅解锁",
     "back_to_list": "返回量表列表",
+    "intro": {
+      "phq9": "PHQ-9 基于 DSM 抑郁症状标准，可用于近两周抑郁症状严重度筛查。",
+      "gad7": "GAD-7 是广泛使用的焦虑筛查工具，可评估近两周焦虑症状水平。",
+      "pss10": "PSS-10 用于评估个体对生活压力的主观感知，是压力研究常用量表。",
+      "cssrs": "C-SSRS 采用结构化风险条目，可用于识别近期自伤/自杀意念与行为风险。",
+      "scl90": "SCL-90 覆盖多维心理症状群，可用于总体心理困扰水平的广泛筛查。",
+      "generic": "该量表基于标准化心理测量框架，可用于初步状态评估。"
+    },
     "errors": {
       "complete_section": "请先完成本组全部题目再继续"
     }
@@ -194,7 +202,20 @@
     "pair_level": "匹配等级",
     "pair_pending": "等待对方完成测试后即可生成匹配结果。",
     "share": "分享结果",
-    "back_to_list": "返回测试列表"
+    "back_to_list": "返回测试列表",
+    "intro": {
+      "mbti": "基于荣格心理类型维度，用于识别信息加工与决策偏好。",
+      "16p": "在 MBTI 维度基础上加入身份倾向维度，描述人格风格差异。",
+      "big5": "基于五因素人格模型（OCEAN），是人格研究中证据较充分的框架之一。",
+      "attachment": "基于依恋理论，用于识别亲密关系中的安全感与互动模式。",
+      "love_language": "基于五种爱之语言框架，反映偏好的情感表达与接收方式。",
+      "stress_coping": "基于 Lazarus 与 Folkman 压力应对模型，评估常见应对策略倾向。",
+      "eq": "参考情绪智力模型，评估自我觉察、情绪调节、共情与关系管理能力。",
+      "inner_child": "结合创伤知情取向的内在小孩框架，探索情绪反应与自我保护模式。",
+      "boundary": "参考关系心理学中的边界设置理论，评估人际边界清晰度与稳定性。",
+      "psych_age": "通过发展心理与人格特质组合指标，估计心理功能的年龄带倾向。",
+      "generic": "该测试基于心理学理论框架，用于非临床场景下的自我探索。"
+    }
   },
   "coach_gate": {
     "title": "开始使用 AI 教练前，先完成一次基础评估",
