--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -125,7 +125,14 @@
     "have_account": "已有账户？",
     "no_account": "还没有账户？",
     "go_login": "去登录",
-    "go_register": "去注册"
+    "go_register": "去注册",
+    "forgot_password": "忘记密码？",
+    "send_reset_link": "发送重置链接",
+    "reset_password": "重置密码",
+    "reset_password_submit": "确认重置密码",
+    "reset_email_sent": "如果该邮箱已注册，我们已发送重置链接。",
+    "reset_success": "密码已重置，请使用新密码登录。",
+    "reset_token_invalid": "重置链接无效或已失效，请重新申请。"
   },
   "onboarding": {
     "title": "开始首次基础评估",
